3164: Improved and cleaned up
