# public/api-spec-v1.json
@@ -432,12 +432,7 @@
                         "type": "integer"
                     },
                     "image": {
-                        "type": [
-                            "string",
-                            "null"
-                        ]
-                    },
-                    "podcast": {
+                        "description": "Image Url set by serializer (cf. EntityNormalizer).",
                         "type": [
                             "string",
                             "null"
@@ -454,8 +449,37 @@
                             "integer",
                             "null"
                         ]
+                    },
+                    "mediaUrl": {
+                        "format": "uri",
+                        "externalDocs": {
+                            "url": "https://schema.org/url"
+                        },
+                        "type": "string"
+                    },
+                    "mediaIsAudio": {
+                        "default": true,
+                        "example": true,
+                        "type": [
+                            "boolean",
+                            "null"
+                        ]
+                    },
+                    "mediaEmbedCode": {
+                        "description": "Media embed code set by serializer (cf. EntityNormalizer).",
+                        "type": [
+                            "string",
+                            "null"
+                        ]
                     }
-                }
+                },
+                "required": [
+                    "name",
+                    "latitude",
+                    "longitude",
+                    "proximityToUnlock",
+                    "mediaUrl"
+                ]
             },
             "PointOfInterest.jsonld-read": {
                 "type": "object",
@@ -511,12 +535,7 @@
                         "type": "integer"
                     },
                     "image": {
-                        "type": [
-                            "string",
-                            "null"
-                        ]
-                    },
-                    "podcast": {
+                        "description": "Image Url set by serializer (cf. EntityNormalizer).",
                         "type": [
                             "string",
                             "null"
@@ -533,8 +552,37 @@
                             "integer",
                             "null"
                         ]
+                    },
+                    "mediaUrl": {
+                        "format": "uri",
+                        "externalDocs": {
+                            "url": "https://schema.org/url"
+                        },
+                        "type": "string"
+                    },
+                    "mediaIsAudio": {
+                        "default": true,
+                        "example": true,
+                        "type": [
+                            "boolean",
+                            "null"
+                        ]
+                    },
+                    "mediaEmbedCode": {
+                        "description": "Media embed code set by serializer (cf. EntityNormalizer).",
+                        "type": [
+                            "string",
+                            "null"
+                        ]
                     }
-                }
+                },
+                "required": [
+                    "name",
+                    "latitude",
+                    "longitude",
+                    "proximityToUnlock",
+                    "mediaUrl"
+                ]
             },
             "Route-read": {
                 "type": "object",
