# src/Controller/Admin/PointOfInterestCrudController.php
@@ -37,8 +37,7 @@ class PointOfInterestCrudController extends AbstractCrudController
         yield TextField::new('name', new TranslatableMessage('Name', [], 'admin'));
 
         yield UrlField::new('mediaUrl', new TranslatableMessage('Media URL', [], 'admin'));
-
-        yield BooleanField::new('isAudio', new TranslatableMessage('Is audio?', [], 'admin'))
+        yield BooleanField::new('mediaIsAudio', new TranslatableMessage('Is audio?', [], 'admin'))
             ->renderAsSwitch(false);
 
         yield TextField::new('subtitles', new TranslatableMessage('Subtitles', [], 'admin'))->setRequired(true)
